Made some changes to source files

--- a/source/index.html
+++ b/source/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE HTML>
 <html>
-<title> <b> EtherChat </b> </title>
+<title> EtherChat </title>
   <head>
   <center> <h1> EtherChat </h1> </center>
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+  <link href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css' rel='stylesheet' type='text/css'>
+
   </head>
   <body class = "container">
   <div class ="table-responsive">
@@ -17,17 +20,23 @@
       <tbody>
         <tr>
           <td id = "addressOfSender"> </td>
+          <td id = "messageTitle"> x </td>
+          <td id = "messagePreview"> x </td>
         </tr>
         <tr>
-          <td id = "messageTitle"></td>
+          <td id = "addressOfSender"></td>
+          <td id = "messageTitle"> x </td>
+          <td id = "messagePreview"> x </td>
         </tr>
         <tr>
-          <td id = "messagePreview"></td>
+          <td id = "addressOfSender"></td>
+          <td id = "messageTitle"> x </td>
+          <td id = "messagePreview"> x </td>
         </tr>
       </tbody>
   </table>
   </div>
-  <center> <h3> Compose New Message </h3> </center>
+  <center> <h3> Compose A New Message </h3> </center>
   <center> <input type="text" placeholder="Address" id="RecipientAddress" /> </center>
   <center> <input type="text" placeholder="Title Of Message" id="MessageTitle" /> </center>
   <center> <input type="text" placeholder="Message Contents" id="MessageContent" /> </center>
